# routes/cards/cards_routes.go
@@ -8,22 +8,56 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type CardsDataItem struct {
+	Title    string  `json:"title" example:"Nível de ilha de calor"`
+	Subtitle *string `json:"subtitle,omitempty" example:"Abaixo da média nacional"`
+	Value    string  `json:"value" example:"25°C"`
+}
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"Erro ao processar a solicitação"`
+	Code    int    `json:"code" example:"400"`
+}
+
+// SetupCardsRoutes
 func SetupCardsRoutes(rg *gin.RouterGroup) {
 	// Weather
+	setupTemperatureRoutes(rg)
+	setupHeatRoutes(rg)
+}
 
-	// Temperature
+// @Summary Retorna dados de temperatura
+// @Description Retorna os dados de temperatura para o município e ano fornecidos
+// @Tags cards
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Param year query string false "Ano dos dados"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/weather/temperature [get]
+func setupTemperatureRoutes(rg *gin.RouterGroup) {
 	tempeRepo := repositories_cards_weather.NewExternalWeatherTemperatureRepository()
 	tempeService := services_cards_weather.NewWeatherTemperatureService(tempeRepo)
 	tempeController := controllers_cards_weather.NewWeatherTemperatureController(tempeService)
 
 	rg.GET("/cards/weather/temperature", tempeController.LoadTemperatureData)
-	// http://localhost:8080/api/v1/cards/weather/temperature?city=3549003&year=2022
+}
 
-	// Heat
+// @Summary Retorna dados de calor extremo
+// @Description Retorna os dados de calor extremo para o município e ano fornecidos
+// @Tags cards
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Param year query string false "Ano dos dados"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/weather/heat [get]
+func setupHeatRoutes(rg *gin.RouterGroup) {
 	heatRepo := repositories_cards_weather.NewExternalWeatherHeatRepository()
 	heatService := services_cards_weather.NewWeatherHeatService(heatRepo)
 	heatController := controllers_cards_weather.NewWeatherHeatController(heatService)
 
 	rg.GET("/cards/weather/heat", heatController.LoadHeatData)
-	// http://localhost:8080/api/v1/cards/weather/heat?city=3549003&year=2022
 }
